[package]
name = "jenkins_sample_lib"
version = "0.0.2"
authors = ["Chris O'Neil <chris.oneil@gmail.com>"]
description = "Dummy library for testing automation for pushing to crates.io"
readme = "README.md"
repository = "https://github.com/maidsafe/jenkins_sample_lib"
license = "MIT OR BSD-3-Clause"
